--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -40,7 +40,7 @@ Parameters:
 
   GitHubUser:
     Type: String
-    Default: SudKul
+    Default: Olatundeadedeji
     Description: GitHub username or organization
     MinLength: 3
     MaxLength: 100
@@ -87,7 +87,7 @@ Metadata:
           - EksClusterName
     ParameterLabels:
       GitHubUser:
-        default: Username
+        default: Olatundeadedeji
       GitHubToken:
         default: Access token
       GitSourceRepo:
