--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -4,19 +4,22 @@
 apiVersion: v1
 data:
   mapRoles: |
-    - groups:
-      - system:bootstrappers
-      - system:nodes
-      rolearn: arn:aws:iam::205825744082:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-1DBHED9TMYRZZ
+    - rolearn: arn:aws:iam::205825744082:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-1DBHED9TMYRZZ
       username: system:node:{{EC2PrivateDNSName}}
-      - system:masters
-      rolearn: arn:aws:iam::205825744082:role/UdacityFlaskDeployCBKubectlRole
+      groups:
+        - system:bootstrappers
+        - system:nodes
+
+    - rolearn: arn:aws:iam::205825744082:role/UdacityFlaskDeployCBKubectlRole
       username: build
       groups:
-      - system:masters
-      userarn: arn:aws:iam::205825744082:user/admin
+        - system:masters
+
+  mapUsers: |
+    - userarn: arn:aws:iam::205825744082:user/admin
       username: admin
       groups:
+        - system:masters
 kind: ConfigMap
 metadata:
   creationTimestamp: "2022-05-11T11:16:26Z"
